--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -40,5 +40,10 @@
   <%= @user.gender %>
 </p>
 
+<p>
+  <strong>Current Order:</strong>
+  <%= @user.current_order_id %>
+</p>
+
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
