--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_for(@order) do |f| %>
-  <% if @product.errors.any? %>
+  <% if @order.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@order.errors.count, "error") %> prohibited this order from being saved:</h2>
 
@@ -12,28 +12,24 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
+    <%= f.label :user_id %><br>
+    <%= f.text_field :user_id %>
   </div>
   <div class="field">
-    <%= f.label :price %><br>
-    <%= f.number_field :price %>
+    <%= f.label :deliver_time %><br>
+    <%= f.datetime_select :deliver_time %>
   </div>
   <div class="field">
-    <%= f.label :description %><br>
-    <%= f.text_area :description %>
+    <%= f.label :total_price %><br>
+    <%= f.text_field :total_price %>
   </div>
   <div class="field">
-    <%= f.label :image %><br>
-    <%= f.text_field :image %>
+    <%= f.label :bonus %><br>
+    <%= f.number_field :bonus %>
   </div>
   <div class="field">
-    <%= f.label :category_id %><br>
-    <%= f.number_field :category_id %>
-  </div>
-  <div class="field">
-    <%= f.label :order_count %><br>
-    <%= f.number_field :order_count %>
+    <%= f.label :status %><br>
+    <%= f.text_field :status %>
   </div>
   <div class="actions">
     <%= f.submit %>
