--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -43,6 +43,10 @@
     <%= f.label :gender %><br>
     <%= f.text_field :gender %>
   </div>
+  <div class="field">
+    <%= f.label :current_order_id %><br>
+    <%= f.text_field :current_order_id %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
