Make Product under Categories.

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -30,5 +30,5 @@
   <%= @product.order_count %>
 </p>
 
-<%= link_to 'Edit', edit_product_path(@product) %> |
-<%= link_to 'Back', products_path %>
+<%= link_to 'Edit', edit_category_product_path(@category, @product) %> |
+<%= link_to 'Back', category_products_path %>
