--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -24,9 +24,9 @@
         <td><%= product.image %></td>
         <td><%= product.category_id %></td>
         <td><%= product.order_count %></td>
-        <td><%= link_to 'Show', product %></td>
-        <td><%= link_to 'Edit', edit_product_path(product) %></td>
-        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', category_product_path(@category, product) %></td>
+        <td><%= link_to 'Edit', edit_category_product_path(@category, product) %></td>
+        <td><%= link_to 'Destroy', [@category, product], method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -34,4 +34,4 @@
 
 <br>
 
-<%= link_to 'New Product', new_product_path %>
+<%= link_to 'New Product', new_category_product_path %>
