Fix bugs and now total price calculation will work as inteneded.

--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -31,6 +31,10 @@
     <%= f.label :status %><br>
     <%= f.text_field :status %>
   </div>
+  <div class="field">
+    <%= f.label :pay_type_id %><br>
+    <%= f.text_field :pay_type_id %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
