--- a/app/views/order_details/_form.html.erb
+++ b/app/views/order_details/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= f.label :order_id %><br>
-    <%= f.number_field :order_id %>
+    <%= f.number_field :order_id, :value => @order.id %>
   </div>
   <div class="field">
     <%= f.label :product_id %><br>
