Added contact_phone and deliver_address back.

--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -35,6 +35,14 @@
     <%= f.label :pay_type_id %><br>
     <%= f.text_field :pay_type_id %>
   </div>
+  <div class="field">
+    <%= f.label :deliver_address %><br>
+    <%= f.text_field :deliver_address %>
+  </div>
+  <div class="field">
+    <%= f.label :contact_phone %><br>
+    <%= f.text_field :contact_phone %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
